--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,20 +10,29 @@ on:
 jobs:
   sonarqube:
     runs-on: windows-latest
+
     steps:
+      # Step 1: Checkout the repo
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
+      # Step 2: Set up PHP with required Moodle extensions
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.1'
-          extensions: mbstring, intl, curl, xml, gd, mysqli
+          extensions: mbstring, intl, curl, xml, gd, mysqli, soap, zip, json
 
+      # Step 3: Check Composer version
+      - name: Check Composer
+        run: composer --version
+
+      # Step 4: Install Composer dependencies (ignore platform requirements for Windows)
       - name: Install Composer dependencies
-        run: composer install --no-progress --no-suggest --prefer-dist
+        run: composer install --no-progress --no-suggest --prefer-dist --ignore-platform-reqs
 
+      # Step 5: Run SonarCloud analysis
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v6
         env:
