--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,16 @@
-sonar.projectKey=Reemy209_moodle
-sonar.organization=reemy209
+# Project identification
+sonar.projectKey=Reemy209/moodle
+sonar.organization=Reemy209
+sonar.projectName=Moodle
 
-
-# This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=moodle
-sonar.projectVersion=1.0
-
-
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+# Scan all folders in the repository
 sonar.sources=.
 
-# Encoding of the source code. Default is default system encoding
+# Language
+sonar.language=php
+
+# Exclusions (optional)
+sonar.exclusions=**/vendor/**, **/node_modules/**, **/tests/**
+
+# Encoding
 sonar.sourceEncoding=UTF-8
